--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,9 @@
     "test",
     "tests"
   ],
+  "engines": {
+    "node": "5.1.1"
+  },
   "dependencies": {
     "sweetalert": "~1.1.3",
     "bootstrap": "~3.3.5",
