--- a/bower.json
+++ b/bower.json
@@ -14,15 +14,12 @@
     "test",
     "tests"
   ],
-  "engines": {
-    "node": "5.1.1"
-  },
   "dependencies": {
     "sweetalert": "~1.1.3",
     "bootstrap": "~3.3.5",
     "font-awesome": "fontawesome#~4.4.0",
     "jquery": "jQuery#~2.1.4",
-    "bootswatch": "~3.3.5+4",
-    "jade": "~1.11.0"
+    "bootswatch": "~3.3.5+4"
+
   }
 }
