--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
         "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "5.0.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -16,6 +19,7 @@
     "express": "^4.13.3",
     "md5": "^2.0.0",
     "mongoose": "^4.2.6",
-    "morgan": "^1.6.1"
+    "morgan": "^1.6.1",
+    "jade": "~1.11.0"
   }
 }
